--- a/app/src/main/res/layout/activity_producto.xml
+++ b/app/src/main/res/layout/activity_producto.xml
@@ -1,6 +1,60 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:padding="6dp">
+
+    <ImageView
+        android:id="@+id/imagenFila"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <LinearLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/imagenFila"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <!-- TextView con el título -->
+        <TextView
+            android:gravity="center"
+            android:id="@+id/tituloFila"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.5"
+            android:text="EJEMPLO TITULO" />
+
+        <!-- TextView con el precio -->
+        <TextView
+            android:gravity="center"
+            android:id="@+id/subtituloFila"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.5"
+            android:text="EJEMPLO PRECIO" />
+        
+        <!-- TextView con la calificación -->
+        <TextView
+            android:gravity="center"
+            android:id="@+id/calificacionFila"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_weight="0.5"
+            android:text="EJEMPLO CALIFICACION" />
+
+
+
+
+    </LinearLayout>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
