--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -107,12 +107,9 @@
         android:id="@+id/botonRegistrar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Registrar
-"
+        android:text="Registrar"
         app:layout_constraintEnd_toEndOf="@+id/radioGroup"
         app:layout_constraintStart_toStartOf="@+id/spinnerPerfil"
         app:layout_constraintTop_toBottomOf="@+id/radioGroup" />
-
-
 
 </androidx.constraintlayout.widget.ConstraintLayout>
